Committing initial changes.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./styles/style.css">
 
     <style>
 
@@ -19,7 +19,98 @@
 
 <body>
 
-    <!-- Header  | Navigation Bar -->
+    <!-- Navigation Bar -->
+    <section id="navigation-bar">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid nav-bar-bg">
+                <img src="./assets/icon-rice-meal.svg" height="50px" width="50px" alt="Web App Icon Wheat Grains"
+                    style="margin:1rem">
+
+                <a class="navbar-brand nav-bar-app-title" href="#">RiceMix</a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: auto;">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Orders</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+
+                    <!-- Search Bar -->
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search Product... "
+                            aria-label="Search">
+                        <button class="btn btn-warning" type="submit">Search</button>
+
+                    </form>
+                </div>
+        </nav>
+    </section>
+
+
+    <!-- Title  -->
+    <section id="title" class="gradient-background">
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-10 col-sm-8 col-lg-6">
+                    <img src="./assets/image-mockup-phone.png" class="d-block mx-lg-auto img-fluid"
+                        alt="Bootstrap Themes" height="100" loading="lazy">
+                </div>
+                <div class="col-lg-6">
+                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Satisfy Your Cravings with Ease</h1>
+                    <p class="lead">RiceMix offers a diverse range of delectable rice dishes that will tantalize your
+                        taste buds and leave you craving for more.</p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                        <button type="button" class="btn btn-light btn-lg px-4 me-md-2">
+                            <img src="./assets/icon-apple.svg" alt="Apple Brand Icon">
+                            Download</button>
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+                            <img src="./assets/icon-google-play.svg" alt="Apple Brand Icon">
+                            Download</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Features  -->
+    <section id="features">
+
+    </section>
+
+
+    <!-- Testimonial -->
+    <section id="testimonial">
+
+    </section>
+
+
+    <!-- Pricing  -->
+    <section id="pricing">
+
+    </section>
+
+
+    <!-- Footer  -->
+    <section id="footer">
+
+    </section>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
