Committing changes on mock-up image sample.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="./assets/image-mockup-phone.png" class="d-block mx-lg-auto img-fluid"
-                        alt="Bootstrap Themes" height="100" loading="lazy">
+                        alt="Bootstrap Themes" width="300" loading="lazy">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Satisfy Your Cravings with Ease</h1>
