--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Navigation Bar -->
     <section id="navigation-bar">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary pt-0 pb-0">
             <div class="container-fluid nav-bar-bg">
                 <img src="./assets/icon-rice-meal.svg" height="50px" width="50px" alt="Web App Icon Wheat Grains"
                     style="margin:1rem">
@@ -34,7 +34,8 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: auto;">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll pt-1 pb-1"
+                        style="--bs-scroll-height: auto;">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -50,9 +51,8 @@
                     </ul>
 
                     <!-- Search Bar -->
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search Product... "
-                            aria-label="Search">
+                    <form class="d-flex p-3" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search... " aria-label="Search">
                         <button class="btn btn-warning" type="submit">Search</button>
 
                     </form>
@@ -63,8 +63,8 @@
 
     <!-- Title  -->
     <section id="title" class="gradient-background">
-        <div class="container col-xxl-8 px-4 py-5">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="container col-xxl-8 px-4 pt-5 pb-0">
+            <div class="row flex-lg-row-reverse align-items-center g-5 pt-5 pb-5">
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="./assets/image-mockup-phone.png" class="d-block mx-lg-auto img-fluid"
                         alt="Bootstrap Themes" width="300" loading="lazy">
@@ -77,7 +77,7 @@
                         <button type="button" class="btn btn-light btn-lg px-4 me-md-2">
                             <img src="./assets/icon-apple.svg" alt="Apple Brand Icon">
                             Download</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+                        <button type="button" class="btn btn-outline-light btn-lg px-4">
                             <img src="./assets/icon-google-play.svg" alt="Apple Brand Icon">
                             Download</button>
                     </div>
@@ -86,16 +86,76 @@
         </div>
     </section>
 
-
     <!-- Features  -->
     <section id="features">
+        <div class="container px-4 py-0" id="hanging-icons">
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="col d-flex align-items-start">
 
+                    <div
+                        class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                        <img src="./assets/icon-delivery.svg" alt="" height="30px">
+                    </div>
+
+                    <div>
+                        <h3 class="fs-2 text-body-emphasis">Fast and Reliable Delivery</h3>
+                        <p>With our fast and reliable delivery service, you can enjoy your favoite rice meals in the
+                            comfort of your own home! </p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <div
+                        class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                        <img src="./assets/icon-check.svg" alt="" height="30px">
+                    </div>
+                    <div>
+                        <h3 class="fs-2 text-body-emphasis">Customize Your Meals</h3>
+                        <p>We offer customization options, allowing you to tailor your rice meals to your liking. </p>
+
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <div
+                        class="icon-square text-body-emphasis  d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+
+                        <img src="./assets/icon-thumbs-up.svg" alt="" height="30px">
+                    </div>
+                    <div>
+                        <h3 class="fs-2 text-body-emphasis">Quality Ingredients</h3>
+                        <p>From locally sourced produce to premium proteins, quality is our top priority, ensuring that
+                            every bite is bursting with flavor. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
     <!-- Testimonial -->
     <section id="testimonial">
+        <div class="my-5">
+            <div class="p-5 text-center bg-body-tertiary">
+                <div class="container py-0 ">
+                    <h1 class="text-body-emphasis">Rave reviews from Rice Lovers like you!</h1><br>
+                    <!-- <img src="./assets/icon-quotation-marks.svg" alt="" class="d-flex justify-content-center"> -->
+                    <p class="col-lg-8 mx-auto lead">
+                        I absolutely love RiceMix! The ordering process is so simple, and the food is
+                        always
+                        delicious. I've tried almost every dish on the menu, and they never disappoint!
+                    </p>
+                    <!-- <img src="./assets/icon-quotation-marks.svg" alt="" class="d-flex justify-content-center"> -->
+                    <img src="./assets/image-rice-meal-1.jpg" class="img-testimonials">
 
+                    <p class="col-lg-8 mx-auto lead">
+                        <br>
+                        "RiceMix has become my go-to for quick and delicious meals. Whether I'm craving something savory
+                        or spicy, they always have something on the menu to satisfy my appetite."
+                    </p>
+                    <img src="./assets/image-rice-meal-2.jpg" class="img-testimonials">
+
+                </div>
+            </div>
+        </div>
     </section>
 
 
