Update in index.html file.

--- a/index.html
+++ b/index.html
@@ -193,18 +193,20 @@
                         class="img-testimonials my-3">  
                 <p>Maria Cruz, PH </p>
                 <!-- Additional brand icons -->
-                <div class="row align-items-center justify-content-center pt-5 g-5">
-                    <div class="col">
-                        <img height="30px" src="./assets/brand-logo-business.png" alt="Brand Business Logo">
-                    </div>
-                    <div class="col">
-                        <img height="30px" src="./assets/brand-logo-mashable.png" alt="Brand Business Logo">
-                    </div>
-                    <div class="col">
-                        <img height="30px" src="./assets/brand-logo-techcrunch.png" alt="Brand Business Logo">
-                    </div>
-                    <div class="col">
-                        <img height="30px" src="./assets/brand-logo-tnw.png" alt="Brand Business Logo">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-12">
+                            <img class="mt-3" height="30px" src="./assets/brand-logo-business.png" alt="Brand Business Logo">
+                        </div>
+                        <div class="col-lg-3 col-sm-12">
+                            <img class="mt-3"  height="30px" src="./assets/brand-logo-mashable.png" alt="Brand Mashable Logo">
+                        </div>
+                        <div class="col-lg-3 col-sm-12">
+                            <img class="mt-3"  height="30px" src="./assets/brand-logo-techcrunch.png" alt="Brand Techcrunch Logo">
+                        </div>
+                        <div class="col-lg-3 col-sm-12">
+                            <img class="mt-3"  height="30px" src="./assets/brand-logo-tnw.png" alt="Brand TNW Logo">
+                        </div>
                     </div>
                 </div>
         </div>
@@ -215,8 +217,8 @@
         <main class="container p-5">
                         
             <div class="row text-center pb-3">
-                <h1 class="">A Plan for Meals</h1>
-                <p class="text-body-secondary">Choose the plan that aligns with your preferences and start savoring delicious rice meals with RiceMix today!.</p>
+                <h2 class="display-4 fw-normal">A Plan for Meals</h2>
+                <p class="fs-5 text-body-secondary">Choose the plan that aligns with your preferences and start savoring delicious rice meals with RiceMix today!.</p>
             </div>
 
             <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
